[gd_scene load_steps=3 format=2]

[ext_resource path="res://res/fonts/Neufreit-ExtraBold.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/UI/NetworkMenu.gd" type="Script" id=2]

[node name="NetworkMenu" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -150.0
margin_right = 250.0
margin_bottom = 150.0
rect_min_size = Vector2( 500, 300 )
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="ColorRect"]
margin_left = 10.0
margin_top = 10.0
margin_right = 490.0
margin_bottom = 45.0
rect_min_size = Vector2( 480, 35 )
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -185.0
margin_right = 250.0
margin_bottom = 185.0
custom_constants/margin_right = 100
custom_constants/margin_top = 100
custom_constants/margin_left = 100
custom_constants/margin_bottom = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_left = 100.0
margin_top = 100.0
margin_right = 400.0
margin_bottom = 303.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="Button" parent="ColorRect/MarginContainer/ButtonContainer"]
margin_right = 300.0
margin_bottom = 35.0
rect_min_size = Vector2( 300, 35 )
custom_fonts/font = ExtResource( 1 )
text = "Host game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="ColorRect/MarginContainer/ButtonContainer"]
margin_top = 45.0
margin_right = 300.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 35 )
custom_fonts/font = ExtResource( 1 )
text = "Join game"

[node name="Label" type="Label" parent="ColorRect/MarginContainer/ButtonContainer"]
margin_top = 90.0
margin_right = 300.0
margin_bottom = 113.0
rect_min_size = Vector2( 300, 23 )
custom_fonts/font = ExtResource( 1 )
text = "Ip address"

[node name="IpInput" type="TextEdit" parent="ColorRect/MarginContainer/ButtonContainer"]
margin_top = 123.0
margin_right = 300.0
margin_bottom = 158.0
rect_min_size = Vector2( 300, 35 )
hint_tooltip = "IP Address"
custom_fonts/font = ExtResource( 1 )

[node name="BackButton" type="Button" parent="ColorRect/MarginContainer/ButtonContainer"]
margin_top = 168.0
margin_right = 300.0
margin_bottom = 203.0
rect_min_size = Vector2( 300, 35 )
custom_fonts/font = ExtResource( 1 )
text = "Back"
[connection signal="pressed" from="ColorRect/MarginContainer/ButtonContainer/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/ButtonContainer/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/ButtonContainer/BackButton" to="." method="_on_BackButton_pressed"]
